force-app/main/default/objects/Spa_Claims__c/Spa_Claims__c.object-meta.xml
<CustomObject>
    <description>API tool , Informatica, adds records from Oracle when the spa id is found. It links claims with spas</description>
    <label>Spa Claims</label>
    <nameField>
        <label>Spa Claims Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spa Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>