force-app/main/default/objects/Spa_Claims__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>CASESAFEID(Opportunity__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>