force-app/main/default/objects/Spa_Claims__c/fields/Bird_Spa__c.field-meta.xml
<CustomField>
    <fullName>Bird_Spa__c</fullName>
    <formula>SPA__r.Bid_Spa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bird Spa</label>
    <type>Checkbox</type>
</CustomField>