force-app/main/default/objects/Spa_Claims__c/fields/CUSTOMER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>CUSTOMER_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>