force-app/main/default/objects/Spa_Claims__c/fields/INVOICE_LINE_ID__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_LINE_ID__c</fullName>
    <externalId>true</externalId>
    <label>INVOICE_LINE_ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>