force-app/main/default/objects/Spa_Claims__c/fields/Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Last_6_Months__c</fullName>
    <description>Oracle creation in last 6 months. Used for reporting.</description>
    <formula>Oracle_Creation_Date__c + 183 &gt; now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 6 Months</label>
    <type>Checkbox</type>
</CustomField>