force-app/main/default/objects/Spa_Claims__c/fields/Last_6_Months_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Last_6_Months_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Roll up summary cannot criteria based on today. This is for workflow rules to update if in last 6 months so that roll up summary can be used.</description>
    <label>Last 6 Months Workflow</label>
    <type>Checkbox</type>
</CustomField>