force-app/main/default/objects/Spa_Claims__c/fields/Oracle_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Creation_Date__c</fullName>
    <label>Oracle Creation Date</label>
    <type>DateTime</type>
</CustomField>