force-app/main/default/objects/Spa_Claims__c/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>Opportunity__r.Account.Parent_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>