force-app/main/default/objects/Spa_Claims__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <formula>Opportunity__r.Account.ParentID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentID</label>
    <type>Text</type>
</CustomField>