force-app/main/default/objects/Spa_Claims__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>150</length>
    <type>Text</type>
</CustomField>