force-app/main/default/objects/Spa_Claims__c/fields/PRODUCT_SIZE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_SIZE__c</fullName>
    <label>PRODUCT_SIZE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>