force-app/main/default/objects/Spa_Claims__c/fields/PRODUCT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_TYPE__c</fullName>
    <label>PRODUCT_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>