force-app/main/default/objects/Spa_Claims__c/fields/Sell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sell_Amount__c</fullName>
    <formula>Unit_Selling_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>