force-app/main/default/objects/Spa_Claims__c/fields/Ship_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Customer__c</fullName>
    <label>Ship to Customer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>