force-app/main/default/objects/Spa_Claims__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Spa Claims</relationshipLabel>
    <relationshipName>Spa_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>