force-app/main/default/objects/Spa_Claims__c/fields/SPA__c.field-meta.xml
<CustomField>
    <fullName>SPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPA</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Spa Claims</relationshipLabel>
    <relationshipName>Spa_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>