force-app/main/default/objects/Spa_Claims__c/fields/Total_Spa_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Spa_Amount__c</fullName>
    <formula>Quantity__c *  Unit_Selling_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spa Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>