force-app/main/default/objects/Spa_Claims__c/fields/Transaction_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Line_Amount__c</fullName>
    <label>Transaction Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>