force-app/main/default/objects/Spa_Claims__c/fields/Unit_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Selling_Price__c</fullName>
    <label>Unit Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>